--- a/bf1_stat_calc/bf1_stat_calc.vcxproj
+++ b/bf1_stat_calc/bf1_stat_calc.vcxproj
@@ -147,12 +147,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="dist_betw_points.h" />
     <ClInclude Include="random_number.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bf1_stat_calc.cpp" />
+    <ClCompile Include="dist_betw_points.cpp" />
     <ClCompile Include="random_number.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
