--- a/bf1_stat_calc/bf1_stat_calc.vcxproj.filters
+++ b/bf1_stat_calc/bf1_stat_calc.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="random_number.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dist_betw_points.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="random_number.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="dist_betw_points.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
