--- a/bf1_stat_calc/bf1_stat_calc.vcxproj
+++ b/bf1_stat_calc/bf1_stat_calc.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="dist_betw_points.h" />
+    <ClInclude Include="hrec.h" />
     <ClInclude Include="random_number.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -155,6 +156,7 @@
   <ItemGroup>
     <ClCompile Include="bf1_stat_calc.cpp" />
     <ClCompile Include="dist_betw_points.cpp" />
+    <ClCompile Include="hrec.cpp" />
     <ClCompile Include="random_number.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
