--- a/bf1_stat_calc/bf1_stat_calc.vcxproj.filters
+++ b/bf1_stat_calc/bf1_stat_calc.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="dist_betw_points.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="hrec.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="dist_betw_points.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="hrec.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
