--- a/bf1_stat_calc/bf1_stat_calc.vcxproj.filters
+++ b/bf1_stat_calc/bf1_stat_calc.vcxproj.filters
@@ -21,13 +21,7 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="random_number.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="dist_betw_points.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hrec.h">
+    <ClInclude Include="math_functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
