Adeed arrays for the weapon stats

--- a/bf1_stat_calc/bf1_stat_calc.vcxproj.filters
+++ b/bf1_stat_calc/bf1_stat_calc.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="hrec.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="weapon_stat_array.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
