--- a/bf1_stat_calc/bf1_stat_calc.vcxproj
+++ b/bf1_stat_calc/bf1_stat_calc.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="dist_betw_points.cpp" />
     <ClCompile Include="hrec.cpp" />
     <ClCompile Include="random_number.cpp" />
+    <ClCompile Include="single_bullet_sim.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
