Test commit using Visual Studio; essentially no changes

--- a/bf1_stat_calc/bf1_stat_calc.vcxproj.filters
+++ b/bf1_stat_calc/bf1_stat_calc.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="offset.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ps2_hrec.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
