--- a/bf1_stat_calc/bf1_stat_calc.vcxproj
+++ b/bf1_stat_calc/bf1_stat_calc.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="bf1_stat_calc.cpp" />
     <ClCompile Include="dist_betw_points.cpp" />
     <ClCompile Include="offset.cpp" />
+    <ClCompile Include="ps2_hrec.cpp" />
     <ClCompile Include="random_number.cpp" />
     <ClCompile Include="single_bullet_sim.cpp" />
     <ClCompile Include="stdafx.cpp">
